feat: libsql for remote control
